Not showing sender name at first message bug fixed

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -54,7 +54,7 @@
 }
 
 .messages-container > :first-child {
-  margin-top: auto;
+  margin-top: 2rem;
 }
 
 form {
